
Feature: side=FALSE in magplot will now not plot any sides (in this case the user could just have used plot, but adding this option makes scripting easier)

License: Changed to GPL-3 after a user request.

v 2.0.0 (on CRAN)

Enough new features to transition to magicaxis version 2.0

Feature: Added magimage (one chanel) and magimageRGB (three chanel) image functions

Feature: Added magtri function to make nice triangle plots of MCMC psoterior chains with a simple high level interface.

Feature: Added projected coordinate plotting via magproj.

Feature: Added function magband.

Feature: Added background grid options for magaxis and magplot.

Feature: Added Nbins output to magrun. This effectively produces a histogram counts output for the final bin limits.

Feature: magplot dots (...) now also get sent to magaxis -> axis, previously they only went to plot.

Fix: cex.lab wasn't being passed to magaxis, now it is., i.e. par(cex.lab=2) will work.

Fix: doc typos

Feature: Extended the contours for magcon silently so they extend over the full plot window.

Feature: You can now parse a two column matrix or data.frame to x in magcon (rather than having to specify y separately).

Fix: Now parse 'tick' through to magaxis.

Feature: Added powbase option to allow log axes to be labelled with powers of e.g. 2 (1,2,4,8 etc) rather than only 10. To accommodate this working nicely minorn now has a default 'auto' mode which does sensible minor tick guess-work.

--

v 2.0.1 (not on CRAN, on GitHub @ asgr/magicaxis)

Fixed magmap docs

Fixed auto scale in magmap so it works with NA and NaN situations.

Fixed issue with magmap where a matrix could cahnge type to vector (when all elements were the same).

Feature: Added cdf scaling to magmap.

FEATURE: Added maghist for pretty histograms.

FEATURE: Added magclip for smart automatic sigma clipping of data. Can be used in maghist and magplot too for xlim/ylim.

TO DO:

FEATURE: Add better in-plot legends.

